# korean-news-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: news-scraper.yml
korean_news_scraper/: __init__.py  extract_article_content.py  getArticleLinks.py  get_article_contents.py  get_article_links.py  google_news_scraper.py  save_article_links.py  save_data_csv.py  scrollDownPage.py  scroll_down_page.py
korean_news_scraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
news_scraper/: __init__.py  news_scaper.py  scrollDownPage.py
news_scrapper/: __init__.py  getArticleLinks.py  news_scaper.py
