[project]
name = "news_scraper"
version = "0.0.1"
authors = [
  { name="kar7mp5", email="tommy1005a@gmail.com" },
]
description = "A python package for web scraping news articles"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kimminsum/news-scraper.git"